7.6.2
  - Added "Columns" and "Text" views to SQLConsole.
  - Added "Copy toClipboard" context menu item.

7.6.1
  - JDBC driver updates.
  - Minor GUI Improvements and bug fixes.

7.6.0
  - Constraint checking tool.
  - Fix for "#23 Bugs when exporting timestamps and JSON ", https://sourceforge.net/p/jailer/bugs/23/
  - Minor GUI Improvements and bug fixes.

7.5.10
  - SQLConsole: added outline-view for SQL statements.

7.5.8
  - SQLConsole: added ability to execute SQL fragments.
  - DDL view for tables.

7.5.7
  - Minor GUI improvements.

7.5.5
  - data browser improvements
	  - In-place editing of query results.
	  - Column filtering in data browser.
	  - Improved table search feature.

7.5.3
  - Performance and GUI improvements.

7.5.2
  - https://github.com/Wisser/Jailer/pull/5 "Include the column names in the first statement to avoid ORA-00918: column ambiguously defined"
  - Table search feature.
  - Minor GUI improvements.

7.5
  - Full featured SQL Console with code completion, syntax highlighting
    and database schema visualization.

7.4.2
  - Improved data model merging.
  - Added ability to change the data model base folder.
  - Metadata views in data browser.

7.4.1
  - Minor GUI Improvements.

7.4
  - Integrated ClosureView into DataBrowser.
  - Double To String conversion without exponential scientific notation.

7.3.1
  - Bugfix: NPE happened when using import-filters.
  - Minor GUI Improvements.

7.3
  - Added ability to open more than one model editor at a time.
  - Issue #4 "NPE when using Weblogic Datasource" (https://github.com/Wisser/Jailer/issues/4 )

7.2.2
  - Performance optimization.
  - new filter type allows to exclude columns from export.

7.2.1
  - Fix for "#20 OutOfMemoryError: Java heap space - Reply" (https://sourceforge.net/p/jailer/bugs/20/ )

7.2
  - Introduction of the "expansion limit" feature for improved navigation.  
  - Searchable combo boxes.
  - Extensions of extraction model files have been changes from "csv" to "jm".